# Roll-the-Troll-py

./: README.md  main.py  pyproject.toml
game/: altscreens.py  dice.py  game.py  gamescreen.py  healthbar.py  responder.py
helper/: baseTemplate.py  color_shift.py  draw.py  emptyobject.py  readfile.py  typewriter.py
text/: credits.txt  end_message.txt  instructions.txt  player_eng.txt  player_ign.txt  player_und.txt  troll_begin.txt  troll_eng.txt  troll_ign.txt  troll_und.txt
